Get products for customers (#10)
